gdnative/tests/ui/export_fail_08.rs
use gdnative::prelude::*;

#[derive(Export, ToVariant)]
#[export(kind = "foo")]
pub enum Foo {
    Bar,
}

fn main() {}
